# aws_powerflow_demo

./: .gitignore  Dockerfile  README.md  main.py  main_ec2_s3.py  pf_ec2_s3.py  pf_lambda_s3.py  pyproject.toml  spark_example.py
data/: grid.json  is_congested.json  scenario.csv
